fixed layout problems on small screens (mobile)

--- a/src/index.css
+++ b/src/index.css
@@ -120,5 +120,5 @@
 }
 
 #root {
-  @apply h-dvh;
+  @apply h-dvh p-0;
 }
